--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "Aliaksei Bychyk",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^3.0.10",
     "request": "^2.87.0"
   }
 }
