--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.0.10",
+    "mysql2": "^1.5.3",
+    "redis": "^2.8.0",
     "request": "^2.87.0"
   },
   "devDependencies": {
